--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,15 @@
 <html>
   <%- include ("./partials/header.ejs") %>
 
-  <body>
+  <body style="background-image: url('https://media.istockphoto.com/photos/wooden-brown-books-shelves-with-a-lamp-picture-id1085770318?k=20&m=1085770318&s=612x612&w=0&h=1MmiueCOCEEjQOGDLuUHAonGuFZQFz2BOicOs0cK1cY=')">
     <%- include ("./partials/sidebar.ejs") %>
-    <h3>Welcome to the library. This is your homepage.</h3>
+
+
+    <div class="card" style="display:flex; width: 35vw;height: 50vh; margin-top: 100px; margin-left: 50px;background-color: #FFF3C4;">
+      <div class="card-body">
+        <h5 class="card-title" style="font-size: 3rem;">AJ BOOKS LIBRARY</h5>
+        <h6 class="card-subtitle mb-2 text-muted" style="font-size: 2.4rem;">Welcome To The Library. This is your Home Page.</h6>
+      </div>
+    </div>
   </body>
 </html>
