--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,16 +1,39 @@
-<div class="col-sm-2">
-  <ul class="sidebar-nav">
-    <li><a href="/">Home</a></li>
-    <li><a href="/books">All books</a></li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Library</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <% if (currentUser){ %>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">User: <%= currentUser.username %> <span class="sr-only">(current)</span></a>
+        </li>
+        
+        <% }%>
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/books">All books</a>
+      </li>
 
-  <ul class="sidebar-nav">
-    <% if (currentUser){ %>
-    <li>User: <%= currentUser.username %></li>
-    <li><a href="/books/loaned">My Borrowed</a></li>
-    <li><a href="/logout">Logout</a></li>
-    <% } else { %>
-    <li><a href="/login">Login</a></li>
-    <% } %>
-  </ul>
-</div>
+      <% if (currentUser){ %>
+        <li class="nav-item">
+          <a class="nav-link" href="/books/loaned">My Borrowed</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+        <% } else { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Register</a>
+        </li>
+        <% } %>
+    </ul>
+
+  </div>
+</nav>
