--- a/views/book_list.ejs
+++ b/views/book_list.ejs
@@ -37,9 +37,9 @@
               </tr>
             </thead>
             <tbody>
-              <% books.forEach(function(book,i){%>
+              <% list.forEach(function(book,i){%>
               <tr>
-                <th scope="row"><%=i %></th>
+                <th scope="row"><%=i+1 %></th>
                 <td><a href="/book/<%=book.id%>/"><%= book.title %></a></td>
                 <td><%=book.author%></td>
                 <td><%=book.genre%></td>
