--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,10 @@
 <html>
   <%- include ("./partials/header.ejs") %>
 
-  <body>
+ <body>
     <%- include ("./partials/sidebar.ejs") %>
-    <h3>Welcome to the library. This is your homepage.</h3>
+    <h3>Welcome to the library.</h3>
+    <hr>
+    <h3>This is your homepage.</h3>
   </body>
 </html>
