--- a/views/book_detail.ejs
+++ b/views/book_detail.ejs
@@ -20,7 +20,7 @@
             <dt>MRP:</dt>
             <dd>Rs. <%= book.mrp %></dd>
             <dt>Available Copies:</dt>
-            <dd><%= num_available %></dd>
+            <dd><%= book.available_copies %></dd>
           </dl>
           <form action="/books/issue" method="POST">
             <input type="text" hidden value="<%= book.id %>" name="bid" />
@@ -28,6 +28,16 @@
               Loan <%= book.title %>
             </button>
           </form>
+          <% if(typeof errors != 'undefined') { %>
+            <% errors.forEach( (error) => { %>
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <%= error.msg %>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div> 
+            <% }); %>
+        <% } %>
         </div>
       </div>
     </div>
