--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -1,6 +1,7 @@
 <html>
   <%- include ("./partials/header.ejs") %>
   <body>
+    <%- include ("./partials/sidebar.ejs") %>
     <h3>Loaned Books list</h3>
 
     <table class="table">
@@ -23,6 +24,14 @@
           <td><%= copy.book.genre %></td>
           <td><%= copy.borrow_date %></td>
           <td>
+            <form action="/books/loaned/return" method="POST">
+              <input type="text" hidden value="<%= copy.book.id %>" name="bid" />
+              <input type="text" hidden value="<%= copy.id %>" name="id" />
+              <input type="text" hidden value="<%= copy.book.available_copies %>" name="copies" />
+              <button class="btn btn-primary" id="return-button" type="submit">
+                Return
+              </button>
+            </form>
             <!-- TODO: Create a Return book tag that is used for returning the book -->
           </td>
         </tr>
